enum TransportType {
  SHIP,
  TRUCK
}